デザイン整えた

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,20 @@
-<h1>投稿一覧</h1>
-<% @posts.each do |post| %> 
-  <p>タイトル</p>
-  <span><%= link_to post.title, post_path(post) %></span><br>
-  <% if post.image.attached? %>
-    <%= image_tag post.image, style: "width:400px; height:300px; object-fit:cover;" %>
-  <% end %><br>
-<% end %>
+<div class="cover-index">
+  <div class="container d-flex flex-column align-items-center">
+    <div class="row mt-5">
+      <h1 class="font-weight-normal">投稿一覧</h1>
+    </div>
+    <div class="row mt-5 index-left w-100">
+      <% @posts.each do |post| %>
+        <div class="one-post col-sm-4 mb-3">
+          <%= link_to post_path(post) do %>
+            <p class="caption">ユーザ名</p>
+            <% if post.image.attached? %>
+              <%= image_tag post.image, style: "width:300px; height:300px; object-fit:cover;" %>
+            <% end %><br>
+            <p class="caption"><%= post.title %></p>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
