--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,48 @@
  *= require_self
  */
  @import "bootstrap";
+
+ html,
+ body {
+   width: 100%;
+   height: 100%;
+   margin: 0;
+   padding: 0;
+ }
+ 
+ .profiler-results {
+   display: none;
+ }
+
+ //ヘッダー
+header {
+  display: flex;
+  background-color: rgb(5, 2, 100);
+}
+
+header div:first-child {
+  margin-right: auto;
+  font-size: 25px;
+}
+
+header div:last-child {
+  margin-right: 30px;
+}
+
+header div {
+  margin-left: 30px;
+  line-height: 30px;
+}
+
+a:hover {
+  color: aqua!important;
+}
+
+#head-top {
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.nav-link {
+  text-decoration: none;
+}
