--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,3 +59,19 @@ a:hover {
 .nav-link {
   text-decoration: none;
 }
+
+//コメント
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: aqua!important;
+  text-decoration: underline;
+}
+
+
+//プロフィールマルにする
+.profile-img {
+  border-radius: 50%;
+}
