--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -22,7 +22,7 @@ h1 {
 
   //投稿一覧
 .cover-index {
-  height: 100%;
+  height: 110%;
   width: 100%;
   background-image: url(/assets/siro.jpg);
   background-color: rgba(255, 255, 255, 0.4);
@@ -80,3 +80,26 @@ h1 {
   #text {
     font-size: 18px;
   }
+
+  //投稿詳細のコメント
+  .comments-index {
+    background-color: #fff;
+    border: 1px #000 solid;
+  }
+  
+  .comment-delete {
+    margin-left: auto;
+  }
+  
+  .comments {
+    margin-left: 50px;
+  }
+  
+  .caption {
+    margin-bottom: 0;
+  }
+
+  //いいね
+.favorite_btn {
+  color: #000;
+}
