--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= favicon_link_tag('favicon.ico') %>
   </head>
 
   <body>
@@ -17,6 +18,7 @@
         <div><%= link_to "トップ", root_path, class: "text-white nav-link" %></div>
         <div><%= link_to "投稿する", new_post_path, class: "text-white nav-link" %></div>
         <div><%= link_to "投稿一覧", posts_path, class: "text-white nav-link" %></div>
+        <div><%= link_to "下書き一覧", confirm_posts_path, class: "text-white nav-link" %></div>
         <div><%= link_to "ユーザ一覧", users_path, class: "text-white nav-link" %></div>
         <div><%= link_to "マイページ", user_path(current_user.id), class: "text-white nav-link" %></div>
         <div><%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: "text-white nav-link" %></div>
