--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -3,23 +3,6 @@
     <div class="row mt-5">
       <h1 class="font-weight-normal">フォロワー一覧</h1>
     </div>
-    <div class="row mt-5 w-50">
-      <% @users.each do |user| %>
-        <div class="one-post card mt-3">
-          <%= link_to user_path(user) do %>
-            <div class="d-flex">
-              <% if user.profile_image.attached? %>
-                <%= image_tag user.profile_image, size: '50x50', class: "mt-3 ml-3 profile-img" %>
-              <% else %>
-                <%= image_tag "no_image.svg", size: '50x50', class: "mt-3 ml-3 profile-img" %>
-              <% end %>
-              <p class="caption h4 mt-4"><%= user.name %></p>
-            </div>
-            <p class="caption"><%= "#{user.posts.count} 投稿" %></p>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-    <%= paginate @users %>
+    <%= render 'index', users: @users, user: @user %>
   </div>
 </div>
