--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,6 +3,7 @@
     <div class="row">
       <h1 class="font-weight-normal mt-5 mb-5">投稿編集</h1>
     </div>
+
     <% if @post.errors.any? %>
       <div class="card text-center text-white bg-danger mb-3">
         <%= @post.errors.count %>件のエラーが発生しました
@@ -11,16 +12,25 @@
         <% end %>
       </div>
     <% end %>
+
     <div class="row">
-      <%= form_with model: @post, local:true do |f| %>
+      <%= form_with model: @post, local: true do |f| %>
+
         <div class="form-group mb-3">
           <label class="form-label">タイトル</label>
           <%= f.text_field :title, class: "form-control" %>
         </div>
+
         <div class="form-group mb-3">
-          <label class="form-label">コメント</label>
-          <%=f.text_area :text, rows: 10, class: "form-control" %>
+          <label class="form-label">アーティスト</label>
+          <%= f.text_field :aritsit, class: "form-control" %>
         </div>
+
+        <div class="form-group mb-3">
+          <label class="form-label">歌詞</label>
+          <%= f.text_area :tweet, rows: 5, class: "form-control" %>
+        </div>
+
         <div class="form-group mb-4">
           <label class="form-label">画像</label><br>
           <% if @post.image.attached? %>
@@ -29,11 +39,14 @@
           <label class="form-label">画像を変更する</label><br>
           <%= f.file_field :image %><br>
         </div>
+
         <div class="form-group">
-          <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select w-25 mb-3"} %>
+          <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"), k] }, {}, { class: "custom-select w-25 mb-3" } %>
         </div>
+
         <%= f.submit '保存する', class: "btn btn-success" %><br>
         <%= link_to '投稿詳細へ', post_path(@post), class: "btn btn-dark mt-3" %>
+
       <% end %>
     </div>
   </div>
