--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -22,8 +22,13 @@
         </div>
 
         <div class="form-group mb-3">
+          <label class="form-label">歌詞</label>
+          <%=f.text_area :text, rows: 3, class: "form-control" %>
+        </div>
+
+        <div class="form-group mb-3">
           <label class="form-label">コメント</label>
-          <%=f.text_area :text, rows: 10, class: "form-control" %>
+          <%=f.text_area :text, rows: 5, class: "form-control" %>
         </div>
 
         <div class="form-group mb-3">
