--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -225,14 +225,15 @@
 /* キャプション文字 */
 .logo-caption-log {
   position: absolute;
-  top: 70px;      /* ここは見た目で微調整 */
-  left: 19%;
+  top: 470px;      /* ここは見た目で微調整 */
+  left: 25%;
   transform: translateX(-50%);
   z-index: 5;
 
   color: #ffffff;
   font-size: 16px;
   white-space: nowrap;
+  font-family: "Hiragino Mincho ProN", "Yu Mincho", serif;
 }
 
 
