--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -23,12 +23,12 @@
 
         <div class="form-group mb-3">
           <label class="form-label">アーティスト</label>
-          <%= f.text_field :aritsit, class: "form-control" %>
+          <%= f.text_field :artist, class: "form-control" %>
         </div>
 
         <div class="form-group mb-3">
           <label class="form-label">歌詞</label>
-          <%= f.text_area :tweet, rows: 5, class: "form-control" %>
+          <%= f.text_area :lyrics, rows: 5, class: "form-control" %>
         </div>
 
         <div class="form-group mb-4">
