--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,57 +1,91 @@
 <div class="cover-user-show">
   <div class="container d-flex flex-column align-items-center">
+
     <div class="row mt-5">
       <% if user_signed_in? && @user == current_user %>
-        <h1 class="font-weight-normal">マイページ</h1>
+        <h1 class="font-weight-normal">Playlist</h1>
       <% else %>
         <h1 class="font-weight-normal"><%= @user.name %>’s Playlist</h1>
       <% end %>
     </div>
+
     <% if user_signed_in? && @user == current_user %>
       <p class="d-flex align-self-end">
         <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn btn-success" %>
       </p>
     <% end %>
-    <% if current_user != @user %>
+
+    <% if user_signed_in? && current_user != @user %>
       <% if current_user.following?(@user) %>
         <p class="d-flex align-self-end">
-          <%= link_to 'フォロー外す', user_relationships_path(@user.id),  data: { turbo_method: :delete }, class: "btn btn-danger" %>
+          <%= link_to "フォロー外す", user_relationships_path(@user.id),
+              data: { turbo_method: :delete }, class: "btn btn-danger" %>
         </p>
-        <% else %>
+      <% else %>
         <p class="d-flex align-self-end">
-          <%= link_to 'フォローする', user_relationships_path(@user.id),  data: { turbo_method: :post }, class:"btn btn-success" %>
+          <%= link_to "フォローする", user_relationships_path(@user.id),
+              data: { turbo_method: :post }, class: "btn btn-success" %>
         </p>
       <% end %>
     <% end %>
+
     <div class="d-flex w-100">
       <% if @user.profile_image.attached? %>
-        <%= image_tag @user.profile_image, size: '100x100', class: "mb-3 profile-img" %>
+        <%= image_tag @user.profile_image, size: "100x100", class: "mb-3 profile-img" %>
       <% else %>
-        <%= image_tag "no_image.svg", size: '100x100', class: "mb-3 profile-img" %>
+        <%= image_tag "no_image.svg", size: "100x100", class: "mb-3 profile-img" %>
       <% end %>
+
       <h4 class="ml-3 mb-3 card w-100 profile"><%= @user.profile %></h4>
     </div>
-    <div class="d-flex">
-      <%= link_to follows_user_path(@user) do %>
-        <h6>フォロー<%= @following_users.count %></h6>
-      <% end %>  
-      <%= link_to followers_user_path(@user) do %>
-        <h6>フォロワー<%= @follower_users.count %></h6>
+
+    <!-- フォロー / フォロワー -->
+    <div class="follow-stats">
+      <%= link_to follows_user_path(@user), class: "follow-link" do %>
+        <span class="follow-count">フォロー <%= @following_users.count %></span>
+      <% end %>
+
+      <%= link_to followers_user_path(@user), class: "follow-link" do %>
+        <span class="follow-count">フォロワー <%= @follower_users.count %></span>
       <% end %>
     </div>
-    <div class="row mt-5 index-left w-100">
-      <% @posts.each do |post| %>
-        <div class="one-post col-sm-3 mb-3">
-          <%= link_to post_path(post) do %>
+
+    <!-- 投稿一覧（カード） -->
+    <div class="w-100 post-list-wrap mt-3">
+      <div class="post-list">
+        <% @posts.each do |post| %>
+          <%= link_to post_path(post), class: "post-item" do %>
+            <div class="post-list-main">
+              
+              <div class="post-list-lyrics">
+                <%= simple_format(h(post.lyrics.to_s)) %>
+              </div>
+
+              <div class="post-list-divider"></div>
+
+              <div class="post-list-sub">
+                <span class="post-list-title"><%= post.title %></span>
+                <% if post.artist.present? %>
+                  <span class="post-list-sep"> / </span>
+                  <span class="post-list-artist"><%= post.artist %></span>
+                <% end %>
+              </div>
+            </div>
+
             <% if post.image.attached? %>
-              <%= image_tag post.image, style: "width:400px; height:300px; object-fit:cover;" %>
+              <div class="post-list-thumb">
+                <%= image_tag post.image, class: "post-list-thumb-img" %>
+              </div>
             <% end %>
-            <p class="caption mb-0"><%= post.title %></p>
-            <p class="caption"><%= "#{post.comments.count} コメント" %></p>
+
           <% end %>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
+
+      <div class="mt-3 d-flex justify-content-center">
+        <%= paginate @posts %>
+      </div>
     </div>
-    <%= paginate @posts %>
+
   </div>
 </div>
